modification html css

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="menu">
-	<a href="index.html"> Accueil </a>
+	<a href="index.html" id="or"> Accueil </a>
 	<a href="metrage.html"> Metrage </a>
 	<a href="reservation.html"> Reservation </a>
 	<a href="plan.html"> Plan </a>
