modification des fichiers html css

--- a/borne/accueil.html
+++ b/borne/accueil.html
@@ -7,9 +7,9 @@
 <script src="script.js"></script>
 </head>
 <body>
+<div id="titre">
 <h2>Bienvenue au salon Lille Mini Métrage </h2>
 <p>Pour continuer cliquez sur l'image ci-dessous</p>
-<input type="button" value="Continuer" id="bouton">
 </div>
 
 </body>
