test ajout image cliquable

--- a/borne/accueil.html
+++ b/borne/accueil.html
@@ -9,7 +9,8 @@
 <body>
 <div id="titre">
 <h2>Bienvenue au salon Lille Mini Métrage </h2>
-<p>Pour continuer cliquez sur l'image ci-dessous</p>
+<p>Pour continuer cliquez sur le logo ci-dessous</p>
+<a href="index.html"> <img src="images/clap.jpg" alt="logo" title="Logo" /> </a>
 </div>
 
 </body>
