ajoute new pages

--- a/borne/accueil.html
+++ b/borne/accueil.html
@@ -10,7 +10,9 @@
 <div id="titre">
 <h2>Bienvenue au salon Lille Mini Métrage </h2>
 <p>Pour continuer cliquez sur le logo ci-dessous</p>
-<a href="index.html"> <img src="images/clap.jpg" alt="logo" title="Logo" /> </a>
+</div>
+<div id="logocliquable">
+<a href="index.html"> <img src="images/logo lmm.png" alt="logo" title="Logo" /> </a>
 </div>
 
 </body>
