avancement index et accueil no error

--- a/borne/index.html
+++ b/borne/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="boutons">
-<div id="plan">	<input type="button" value="Plan du salon" id="bt1"> </div>
-<div id="liste"><input type="button" value="Liste des metrages" id="btn2"> </div>
-<div id="actu">	<input type="button" value="Actualites" id="btn3"> </div>
+<li><a href="plan.html" title="Plan du salon"> Plan salon </a> </li>
+<li><a href="liste.json" title="Liste des metrages"> Liste metrages </a> </li>
+<li><a href="actualite.html" title="Actualité">Actualites </a> </li>
+
 </div>
 </body>
 <footer>
 </footer>
 </html>
+
