modification page contact et style.css

--- a/site/index.html
+++ b/site/index.html
@@ -102,7 +102,10 @@
     
     
 <!--Bas de la page-->
-<footer>
+<footer class="footer">
+    <a href="presse.html">presse</a>
+   
+    <a href="contact.html">contact</a>
         <div class="f-right">
             <a href="#" class="m-link"> <i class="fa fa-facebook" aria-hidden="true"></i> </a>
             <a href="#" class="m-link"> <i class="fa fa-twitter" aria-hidden="true"></i> </a>
