--- a/site/contact.html
+++ b/site/contact.html
@@ -35,7 +35,10 @@
         </div>
     </nav>
 </header2>
+ <div id="texte-contact">
  <h3> Contactez-nous, notre support répondras dans les 48 heures à venir</h3>
+     
+    </div>
 <div class="container">
   <form action="action_page.php">
 
