test changement titre plan

--- a/borne/plan.html
+++ b/borne/plan.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="title-plan">
-<h2> Plan de l'intérieur </h2> </div>
+<h2> Plan du salon </h2> </div>
   <div id="acces">
   <img src="images/plan3.png" alt="Plan accès" />
   </div>
