--- a/borne/plan.html
+++ b/borne/plan.html
@@ -9,18 +9,29 @@
 <body>
 <div id="title-plan">
 <h2> Plan du salon </h2> </div>
-  <div id="acces">
-
-  <img src="images/Plan_LMM.png" alt="Plan accès" />
-
-  
-
+  <div id="planinterne">
+  <img src="images/Plan_LMM.png" alt="Plan interieur" />
   </div>
-
+  <div id="legende">
+<ul>
+    <p>Légende :</p>
+    <li id="bleu">Social</li>
+    <li id="rouge">Découverte</li>
+    <li id="jaunef">Initiation</li>
+    <li id="rose">Interview</li>
+    <li id="jaune">Concours</li>
+    <li id="gris">Echangeur monnaie</li>
+    <li id="orange">Restauration/WC</li>
+    <li id="vert">Diffusions</li>
+      </ul>    
+</div>
 
 
 </body>
 <footer>
+    <div id="btn-return">
+    <a href="index.html"><input type="button" value="retour" id="return"/> </a>
+    </div>
 </footer>
 
 </html>
