--- a/site/presse.html
+++ b/site/presse.html
@@ -39,13 +39,8 @@
 <section class="tendances">
     <div class="tendances-item tendances-txt">
         <h3 class="title-like">Communiqué de presse</h3>
-
         <p>Voici le communiqué de presse de l'agence pour promouvoir l'événement.Les <strong>partenariats</strong> sont présent dedans.
-
-
-
-            
-           <p>Si vous avez un problème pour nous contactez, rendez vous sur la page contact.</p>
+            Si vous avez un problème pour nous contactez, rendez vous sur la page contact.</p>
         <br/>
         <a href="presse.html"
    download="download/Communiqué_de_presse.jpg">Télécharger le Communiqué</a>
