fin page metrage

--- a/site/index.html
+++ b/site/index.html
@@ -24,10 +24,10 @@
         </div>
             
         <div class="m-right">
-            <a href="#" class="m-link"> <i class="fa fa-home" aria-hidden="true"></i> Accueil</a>
-            <a href="#" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Metrage</a>
-            <a href="#" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Reservation</a>
-            <a href="#" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Plan</a>
+            <a href="index.html" class="m-link"> <i class="fa fa-home" aria-hidden="true"></i> Accueil</a>
+            <a href="metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Metrage</a>
+            <a href="reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Reservation</a>
+            <a href="plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Plan</a>
         </div>
         <div class="m-nav-toogle">
             <span class="m-toogle-icon"></span>
