--- a/site/presse.html
+++ b/site/presse.html
@@ -65,6 +65,6 @@
         <div class="tendances-item tendances-img" style="background-image:url(images/Bannière.jpg)">
             <span>Pack complet publicité</span>
         </div>
-
+    </section>
 
 <!--Bas de la page-->
