refonte graphique borne et site ajout metrage borne

--- a/site/plan.html
+++ b/site/plan.html
@@ -65,7 +65,17 @@ Horaires
        <td> 9h-19h </td>
    </tr>
 </table>
-                
+<div class="acces">
+    <p><strong>ACCESSIBILITÉ : </strong> <br>
+Lille Grand Palais offre une grande accessibilité et un parking intégré de 1186 places ainsi que plus de 7000 places de parking situées à 10 minutes à pied. <br>
+
+        <strong>En train </strong> : Gare TGV de Lille Europe et Gare de Lille Flandres à 9 minutes à pied.<br>
+  <strong>En voiture</strong> : aux portes de l’autoroute A1 et A25. <br>
+  <strong>En avion</strong>  : 3 aéroports internationaux : Lille Lesquin à 15 minutes en voiture, Paris-Charles de Gaulle à 60 minutes en voiture, Bruxelles Zaventem à 70 minutes en voiture.<br>
+  <strong>En vélo</strong> : Station « zénith » devant Lille Grand Palais et 2 stations V’Lille (4 minutes à pied) : Cité administrative et Hôtel de région.<br>
+  <strong>En métro</strong> : 4 stations : Lille Grand Palais (5 minutes à pied), Mairie de Lille (7 minutes à pied) et Gare Lille Flandres et Lille Europe (9 minutes à pied).<br>
+  <strong>En bus</strong> : Citadine de Lille : arrêt « Lille – Zénith » Liane 90 et ligne 18 : arrêt « Lille Grand Palais ».</p><br>
+                </div>
                 <br>
                 <a href="#" class="myButton">Télécharger le plan d'intérieur</a>
             
