fin esthetique du site et debut traduction, ajout de fichiers

--- a/borne/index.html
+++ b/borne/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="boutons">
 <li><a href="plan.html" title="Plan du salon"> Plan salon </a> </li>
-<li><a href="liste.json" title="Liste des metrages"> Liste metrages </a> </li>
+<li><a href="liste.html" title="Liste des metrages"> Liste metrages </a> </li>
 <li><a href="actualite.html" title="Actualité">Actualites </a> </li>
 
 </div>
