mise en ligne de l'état actuel du site

--- a/borne/accueil.html
+++ b/borne/accueil.html
@@ -13,7 +13,8 @@
   </div>
 
 <div id="logocliquable">
-<a href="index.html"> <img src="images/logo_version_noir.png" alt="logo" title="Logo" /> </a>
+<a href="index.html"> 
+<img src="images/logo_version_noir.png" alt="logo" title="Logo" /> </a>
 </div>
 
 </body>
