--- a/borne/actualite.html
+++ b/borne/actualite.html
@@ -7,6 +7,8 @@
 <script src="script.js"></script>
 </head>
 <body>
+    <div id="trad">
+        <a href="actualite.html" title="traduction"> </a> </div>
 <div class="planning">
 <section class="texte-vendredi">
     <p>
@@ -19,6 +21,7 @@
 </section>
 
     <section class="texte-samedi">
+        <a href="actualiteEN.html" title="traduction">Traduire</a><br/>
     <p>
        
         <strong class="date">Samedi 26 octobre.</strong>
@@ -40,6 +43,7 @@
         <br/>14h<strong> Interview de la structure Dick Laurent.</strong>
         <br/>16h<strong> Le youtubeur et réalisateur Ludovik répondra à nos questions.</strong>
         <br/>17h30<strong> Conférence sur le dynamisme de vos métrages.</strong>
+        <br/>18h30<strong>Cérémonie de fermeture.</strong>
     </p>
 </section>
     </div>
