--- a/borne/liste.html
+++ b/borne/liste.html
@@ -7,9 +7,9 @@
 <script src="script.js"></script>
 </head>
 <body>
-    <a href="index.html" class="Return">Retour à l'Index</a>
+    <a href="index.html" class="Return">Retour</a>
 <div id="titre-liste">
-<h2 style="margin-bottom: 0px; margin-top: 0px;"> Liste des métrages</h2>
+<h2 style="margin-bottom: 0px; margin-top: 0px;"> Liste des métrages / Short-Film list</h2>
     </div>
     
 <div id="aligner">
