--- a/borne/plan.html
+++ b/borne/plan.html
@@ -26,7 +26,7 @@
       </ul>    
 </div>
 
-<a href="index.html" class="Return">Retour à l'Index</a>
+<a href="index.html" class="Return">Retour</a>
 </body>
 <footer>
    
