--- a/site/FR/presse.html
+++ b/site/FR/presse.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> Lille Mini Métrage </title>
 <link rel="stylesheet" href="../style.css">
-<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="../normalize.css">
 
 </head>
 <body>
@@ -24,11 +24,11 @@
         </div>
 
         <div class="m-right">
-            <a href="index.html" class="m-link"> <i class="fa fa-home" aria-hidden="true"></i> Accueil</a>
-            <a href="FR/metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Metrage</a>
-            <a href="FR/reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Reservation</a>
-            <a href="FR/plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Plan</a>
-             <a href="EN/index.html" class="m-link">Traduire</a>
+            <a href="../index.html" class="m-link"> <i class="fa fa-home" aria-hidden="true"></i> Accueil</a>
+            <a href="metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Metrage</a>
+            <a href="reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Reservation</a>
+            <a href="plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Plan</a>
+             <a href="../EN/EN/presse.html" class="m-link">Traduire</a>
         </div>
             
         <div class="m-nav-toogle">
@@ -72,8 +72,8 @@
         </div>
     </section>
         <footer class="footer">
-    <a href="FR/presse.html" class="f-link">presse</a>
-    <a href="FR/contact.html" class="f-link">contact</a>
+    <a href="presse.html" class="f-link">presse</a>
+    <a href="contact.html" class="f-link">contact</a>
         
     <img src="images/logo_version_blanche.png"/>
         <div class="f-right">
