--- a/borne/accueil.html
+++ b/borne/accueil.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title> Lille Mini Métrage </title>
 <link rel="stylesheet" href="style.css">
+<link rel="manifest" href="manifest.json">
 <script src="script.js"></script>
 </head>
 <body>
