--- a/borne/index.html
+++ b/borne/index.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title> Lille Mini Métrage </title>
 <link rel="stylesheet" href="style.css">
+<link rel="manifest" href="manifest.json">
 <script src="script.js"></script>
 </head>
 <body>
 <div id="boutons">
 <li><a href="plan.html" title="Plan du salon"> Plan salon </a> </li>
-<li><a href="liste.html" title="Liste des metrages"> Liste metrages </a> </li>
+<li><a href="liste.php" title="Liste des metrages"> Liste metrages </a> </li>
 <li><a href="actualite.html" title="Actualité">Actualites </a> </li>
 
 </div>
