--- a/site/EN/EN/metrage.html
+++ b/site/EN/EN/metrage.html
@@ -28,7 +28,7 @@
             <a href="metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Short-film</a>
             <a href="reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Booking</a>
             <a href="plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Map</a>
-             <a href="../../FR/metrage.html" class="m-link">Translate</a>
+             <a href="../../FR/metrage.html" class="m-link"><i class="fa fa-flag" aria-hidden="true"></i>Translate</a>
         </div>
             
         <div class="m-nav-toogle">
