--- a/site/EN/EN/presse.html
+++ b/site/EN/EN/presse.html
@@ -25,10 +25,10 @@
 
         <div class="m-right">
             <a href="../index.html" class="m-link"> <i class="fa fa-home" aria-hidden="true"></i> Home</a>
-            <a href="EN/metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Short-film</a>
-            <a href="EN/reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Booking</a>
-            <a href="EN/plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Map</a>
-             <a href="../../FR/presse.html" class="m-link">Translate</a>
+            <a href="metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Short-film</a>
+            <a href="reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Booking</a>
+            <a href="plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Map</a>
+             <a href="../../FR/presse.html" class="m-link"><i class="fa fa-flag" aria-hidden="true"></i>Translate</a>
         </div>
             
         <div class="m-nav-toogle">
@@ -39,36 +39,35 @@
 </header2>
     <section class="tendances">
         <div class="tendances-item tendances-txt">
-            <h3 class="title-like">Communiqué de presse</h3>
-            <p>Voici le communiqué de presse de l'agence pour promouvoir l'événement.Les <strong>partenariats</strong> sont présent dedans.
-                Si vous avez un problème pour nous contactez, rendez vous sur la page contact.</p>
+            <h3 class="title-like">Press release</h3>
+            <p>Here is the agency press release to promote the event. The <strong>partnerships </strong> are included in it. If you have troubles to contact us, go on the “contact” page.
+</p>
             <br/>
            <div id="btn_dwnld">
             <a href="presse.html"
-       download="download/Communiqué_de_presse.jpg">Télécharger le Communiqué</a>
+       download="download/Communiqué_de_presse.jpg">DOWNLOAD THE PRESS RELEASE</a>
         </div>
         </div>
         <div class="tendances-item tendances-img" style="background-image:url(download/Communiqué_de_presse.jpg)">
-            <span>Extrait visuel du communiqué</span>
+            <span>Press release extract</span>
         </div>
     </section>
 
 
     <section class="tendances tendances-inverse">
         <div class="tendances-item tendances-txt">
-            <h3 class="title-like">Programmes, flyer, affiches</h3>
-            <p>Besoin de consulter notre programme ? Vous souhaitez coller notre affiches dans votre quartier ?
-              Voila pour vous  <strong>Un pack complet</strong> Comprenant le programme, un flyer et une affiche.
-              Merci d'en faire bon usage, nous mettons à votre disposition nos éléments de communication afin que vous étendiez
-              le périmètre de connaissance de l'événement.</p>
+            <h3 class="title-like">Programs, flyer, posters</h3>
+            <p>Need to see our program ? Want to stick our posters in your district ?
+              Here is for you  <strong>a full pack</strong> including programs, flyer and posters.
+             Please use it appropriately, our communication elements are available for you to spread the word.</p>
             <br/>
             <div id="btn_dwnld2">
             <a href="presse.html"
-       download="download/Communiqué_de_presse.jpg">Télécharger le pack</a>
+       download="download/affiche-paysage-termine.jpg">DOWNLOAD THE AD PACK</a>
             </div>
         </div>
         <div class="tendances-item tendances-img" style="background-image:url(images/Bannière.jpg)">
-            <span>Pack complet publicité</span>
+            <span>Full ad pack</span>
         </div>
     </section>
           <footer class="footer">
