--- a/site/FR/contact.html
+++ b/site/FR/contact.html
@@ -28,7 +28,7 @@
             <a href="metrage.html" class="m-link"> <i class="fa fa-film" aria-hidden="true"></i> Metrage</a>
             <a href="reservation.html" class="m-link"> <i class="fa fa-ticket" aria-hidden="true"></i> Reservation</a>
             <a href="plan.html" class="m-link"> <i class="fa fa-map-o" aria-hidden="true"></i> Plan</a>
-             <a href="../EN/EN/contact.html" class="m-link">Traduire</a>
+             <a href="../EN/EN/contact.html" class="m-link"><i class="fa fa-flag" aria-hidden="true"></i>Traduire</a>
             
         </div>
             
